/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/6.8.3/samples
 */
plugins {
    // Apply the java-library plugin for API and implementation separation.
    id 'java'
    id 'jacoco'
    id 'net.researchgate.release' version '2.8.1'
}

archivesBaseName = 'argsscanner'
group = 'org.schlibbuz.commons'
version = '1.0-SNAPSHOT'
description = 'argsscanner'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.named('test') {
    useTestNG()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
}

release {
    git {
        requireBranch = 'main'
    }
}

repositories {
    // Use JCenter for resolving dependencies.
    mavenLocal()
    jcenter()
    mavenCentral()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.5.5'
    testImplementation 'org.testng:testng:7.4.0'
    testImplementation 'org.mockito:mockito-core:3.8.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.14.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
    implementation 'commons-io:commons-io:2.8.0'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.google.guava:guava:30.1.1-jre'
    implementation 'org.jsoup:jsoup:1.13.1'
    implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
    implementation 'org.apache.poi:poi:5.0.0'
    implementation 'org.apache.poi:poi-ooxml:5.0.0'
}
